<resources>
    <string name="app_name">GadgetStore</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="top_icon">Top Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="google_icon">Google Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="city">City</string>
    <string name="back">Back</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="company_name">Gadget Store</string>
    <string name="welcome_to_gadget_store_app">Welcome to Gadget Store App!</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="company_link">https://www.gagetstore.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="products">Products</string>
    <string name="gadgets">Gadgets</string>
    <string name="gadgets_and_mobile_phones">Gadgets and Mobile Phones</string>
    <string name="search_item_here">Search Your Item hear ...</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="no_product">Sorry There Is No New Product Yet</string>
    <string name="cart_empty">Your Cart Is Empty</string>
    <string name="no_purchase">You Have Not Purchased Anything Yet</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="discount">20% Off</string>
    <string name="description">Description</string>
    <string name="price">Price: </string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detailed_product">Detailed Product</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_date">Product Date</string>
    <string name="product_time">Product Time</string>
    <string name="product_total_price">Total Price</string>
    <string name="product_total_quantity">Total Quantity</string>
    <string name="your_order">Your Order Has Been Placed</string>
    <string name="thank_for_purchase">Thank You For Purchasing Our Product \n Please Come Again</string>
    <string name="update">Update</string>
    <string name="checkout">Checkout</string>
    <string name="select_method">Select Method</string>

    <string name="agreement">By placing an order you agree to our \n<b>Terms</b> And <b>Conditions</b></string>
    <string name="place_order">Place Order</string>
    <string name="favourites">Favourites</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="promo_code">Promo Code</string>
    <string name="total_cost">Total Cost</string>
    <string name="pick_discount">Pick Discount</string>
    <string name="total_price">Total Price:</string>
    <string name="bought">Bought</string>
    <string name="admin_page">Admin Page</string>
    <string name="add_item">Add Item</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>