<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="7dp">

    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weight="2">
            <TextView
                android:text="@string/product_name"
                android:textSize="16sp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/product_name"
                android:text="@string/product_name"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weight="2">
            <TextView
                android:text="@string/product_price"
                android:textSize="16sp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/product_price"
                android:text="@string/product_price"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weight="2">
            <TextView
                android:text="@string/product_date"
                android:textSize="16sp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/product_date"
                android:text="@string/product_date"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weight="2">
            <TextView
                android:text="@string/product_time"
                android:textSize="16sp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/product_time"
                android:text="@string/product_time"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weight="2">
            <TextView
                android:text="@string/product_total_quantity"
                android:textSize="16sp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/product_total_quantity"
                android:text="@string/product_total_quantity"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weight="2">
            <TextView
                android:text="@string/product_total_price"
                android:textSize="16sp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/product_total_price"
                android:text="@string/product_total_price"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>