<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".ui.category.CategoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:background="@drawable/search_gb"
            android:hint="@string/search_item_here"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/popular_products"/>
            <TextView
                android:id="@+id/view_all_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="7dp"
                android:text="@string/view_all"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:id="@+id/pop_rec"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/explore_products"/>
            <TextView
                android:id="@+id/view_all_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="7dp"
                android:text="@string/view_all"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:id="@+id/explore_rec"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/recommended_products"/>
            <TextView
                android:id="@+id/view_all_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="7dp"
                android:text="@string/view_all"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:id="@+id/recommended_rec"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</ScrollView>